fix [#34279] Python console: Selected region is not highlighted when using white background color